--- a/bot_settings.json
+++ b/bot_settings.json
@@ -1,5 +1,5 @@
 {
-    "owner": "0000000000000",
+    "owner": "111111111111",
     "defaultPrefix": "/",
-    "defaultLanguage": "en"
+    "defaultLanguage": "id"
 }
